# tensor_backend

./: .env  Dockerfile  db.py  docker-compose.yml  pyproject.toml
backend/: db.py  ingest_dataset.py  main.py  models.py  security.py  supabase_client.py  task_queue.py
backend/routes/: datasets.py  users.py
qdrant_data/: raft_state.json
supabase/: config.toml
supabase/migrations/: 20250723204950_init_tables.sql
